// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic extend composed with project 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "_depth": 0,
    },
    Object {
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "_depth": 0,
    },
    Object {
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "_depth": 0,
    },
    Object {
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "_depth": 0,
    },
    Object {
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "_depth": 0,
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "_depth": Object {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "JobFamily",
      "TCOE",
      "_depth",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic extend with const col 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 0,
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
      "_depth": Object {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
      "_depth",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic filter 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic groupBy 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "JobFamily": "Engineering & Systems Engineering",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
    },
    Object {
      "JobFamily": "Engineering & Systems Engineering",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
    },
    Object {
      "JobFamily": "Executive Management",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
    },
    Object {
      "JobFamily": "Executive Management",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
    },
    Object {
      "JobFamily": "Executive Management",
      "TCOE": 819582,
      "Title": "General Manager",
    },
    Object {
      "JobFamily": "Finance & Accounting",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
    },
    Object {
      "JobFamily": "Legal & Paralegal",
      "TCOE": 321543,
      "Title": "General Counsel",
    },
    Object {
      "JobFamily": "Legal & Paralegal",
      "TCOE": 445028,
      "Title": "Senior Attorney",
    },
    Object {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 113775,
      "Title": "Electrician",
    },
    Object {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 124962,
      "Title": "Structures Inspector",
    },
    Object {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
    },
    Object {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
    },
    Object {
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
    },
    Object {
      "JobFamily": "Police",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
    },
    Object {
      "JobFamily": "Public Affairs & Marketing",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
    },
    Object {
      "JobFamily": "Safety",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
    },
    Object {
      "JobFamily": "Transportation Operations",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
    },
    Object {
      "JobFamily": "Transportation Operations",
      "TCOE": 352988,
      "Title": "Station Agent",
    },
    Object {
      "JobFamily": "Transportation Operations",
      "TCOE": 118799,
      "Title": "Train Operator",
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "TCOE",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic project operator 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
    },
    Object {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
    },
    Object {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    Object {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    Object {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    Object {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`basic sort 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`chained extend 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
      "_depth": 0,
      "_pivot": null,
    },
    Object {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
      "_depth": 0,
      "_pivot": null,
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
      "_depth": Object {
        "columnType": "INTEGER",
        "displayName": "_depth",
      },
      "_pivot": Object {
        "columnType": "TEXT",
        "displayName": "_pivot",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
      "_pivot",
      "_depth",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`compound key sort 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`null const extend 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
      "_pivot": null,
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
      "_pivot": null,
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
      "_pivot": null,
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_pivot": null,
    },
    Object {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
      "_pivot": null,
    },
    Object {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
      "_pivot": null,
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_pivot": null,
    },
    Object {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
    },
    Object {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
    },
    Object {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
      "_pivot": null,
    },
    Object {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
      "_pivot": null,
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
      "_pivot": Object {
        "columnType": "TEXT",
        "displayName": "_pivot",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
      "_pivot",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`t1 - basic sqlite tableQuery 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "email": "john@doe.com",
      "firstName": "John",
      "lastName": "Doe",
      "phoneNumber": 123456789,
    },
    Object {
      "email": "jane@doe.com",
      "firstName": "Jane",
      "lastName": "Doe",
      "phoneNumber": 9876543210,
    },
    Object {
      "email": "james.bond@mi6.co.uk",
      "firstName": "James",
      "lastName": "Bond",
      "phoneNumber": 612345678,
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "email": Object {
        "columnType": "TEXT",
        "displayName": "email",
      },
      "firstName": Object {
        "columnType": "TEXT",
        "displayName": "firstName",
      },
      "lastName": Object {
        "columnType": "TEXT",
        "displayName": "lastName",
      },
      "phoneNumber": Object {
        "columnType": "INTEGER",
        "displayName": "phoneNumber",
      },
    },
    "columns": Array [
      "firstName",
      "lastName",
      "email",
      "phoneNumber",
    ],
    "dialect": "sqlite",
  },
}
`;

exports[`t2 - basic bart table query 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 238269,
      "JobFamily": "Legal & Paralegal",
      "Name": "Burrows, Matthew",
      "TCOE": 321543,
      "Title": "General Counsel",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 170383,
      "JobFamily": "Transportation Operations",
      "Name": "Crespo, Rodolfo",
      "TCOE": 238211,
      "Title": "Chief Transportation Officer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 165470,
      "JobFamily": "Legal & Paralegal",
      "Name": "Lee, Thomas",
      "TCOE": 224345,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 160289,
      "JobFamily": "Legal & Paralegal",
      "Name": "Nuetzel, Victoria",
      "TCOE": 220683,
      "Title": "Senior Attorney",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 157300,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Ruffa, Frank",
      "TCOE": 209709,
      "Title": "Group Manager, Capital Projects",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 152434,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": "Dupont, Jean-Luc",
      "TCOE": 212535,
      "Title": "Group Manager Systems Capital Prog",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Hui, Sam",
      "TCOE": 128332,
      "Title": "Wayside Inspector",
      "Union": "SEIU",
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Reinhardt, Michael",
      "TCOE": 124962,
      "Title": "Structures Inspector",
      "Union": "SEIU",
    },
    Object {
      "Base": 77446,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Estrada, Phillip",
      "TCOE": 123432,
      "Title": "Vehicle Inspector",
      "Union": "SEIU",
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
    },
    Object {
      "Base": 74068,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Smith, Daniel",
      "TCOE": 104260,
      "Title": "Transit Vehicle Mechanic",
      "Union": "SEIU",
    },
    Object {
      "Base": 61184,
      "JobFamily": "Transportation Operations",
      "Name": "Smith, Westley",
      "TCOE": 118799,
      "Title": "Train Operator",
      "Union": "ATU",
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
    },
    Object {
      "Base": 60790,
      "JobFamily": "Transportation Operations",
      "Name": "Serrianni, Cheryl",
      "TCOE": 132030,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    Object {
      "Base": 60781,
      "JobFamily": "Transportation Operations",
      "Name": "Nagel, Kevin",
      "TCOE": 105854,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    Object {
      "Base": 60771,
      "JobFamily": "Transportation Operations",
      "Name": "Riggs, Joshua",
      "TCOE": 115104,
      "Title": "Station Agent",
      "Union": "ATU",
    },
    Object {
      "Base": 59817,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": "Knight, Joshua",
      "TCOE": 113775,
      "Title": "Electrician",
      "Union": "SEIU",
    },
  ],
  "schema": Object {
    "columnMetadata": Object {
      "Base": Object {
        "columnType": "INTEGER",
        "displayName": "Base",
      },
      "JobFamily": Object {
        "columnType": "TEXT",
        "displayName": "Job Family",
      },
      "Name": Object {
        "columnType": "TEXT",
        "displayName": "Name",
      },
      "TCOE": Object {
        "columnType": "INTEGER",
        "displayName": "TCOE",
      },
      "Title": Object {
        "columnType": "TEXT",
        "displayName": "Title",
      },
      "Union": Object {
        "columnType": "TEXT",
        "displayName": "Union",
      },
    },
    "columns": Array [
      "Name",
      "Title",
      "Base",
      "TCOE",
      "JobFamily",
      "Union",
    ],
    "dialect": "sqlite",
  },
}
`;
